Fixed the bug that the menu would disapear if you moused through the white space between the drop point and the menu

--- a/hoverMenus.css
+++ b/hoverMenus.css
@@ -4,29 +4,46 @@
 
   /* Positioning */
   position: absolute;
-  top: 28px;
 
   /* Box Model */
-  padding: 0;
-  /*padding-bottom: 5px;*/
+  padding:0;
+  padding-top: 20px;
+  margin: 0;
 
   /* Visual */
   list-style: none;
   text-align: left;
-  background-color: #E3E3E3;
-  border-style: solid;
-  border-color: #BABABA;
-  border-width: .1em;
+  background-color:transparent;
   min-width: 75px;
 
 }
 
 .dropdown-menu-item {
+
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 5px;
   padding-top: 5px;
   border-bottom-style: solid;
+  border-left-style: solid;
+  border-right-style: solid;
   border-width: .1em;
   border-color: #BABABA;
+  background-color: #E3E3E3;
+
 }
+
+.dropdown-menu-item-top {
+
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  border-style:solid;
+  border-width: .1em;
+  border-color: #BABABA;
+
+  background-color: #E3E3E3;
+
+}
+
